[PROCESS](github actions) moved github actions in main folder

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -6,8 +6,7 @@
   "license": "GNU",
   "main": "src/app.ts",
   "directories": {
-    "lib": "src",
-    "test": "__tests__"
+    "lib": "src"
   },
   "files": [
     "src"
