--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -5,8 +5,7 @@
   "license": "GNU",
   "main": "node_modules/expo/AppEntry.js",
   "directories": {
-    "lib": "src",
-    "test": "__tests__"
+    "lib": "src"
   },
   "files": [
     "src"
