--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "root",
   "private": true,
+  "license": "GNU",
+  "scripts": {
+    "tests": "lerna run test --stream",
+    "dev-api": "lerna run dev --scope api --stream",
+    "dev-app": "lerna run start --scope app --stream --npm-client=yarn"
+  },
   "devDependencies": {
     "lerna": "^3.20.2",
     "typescript": "^3.8.3"
