[ARCHI](shared types) added package containing shared types

--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -17,5 +17,10 @@
     "babel.config.js",
     "metro.config.js",
     "jest.config.js"
+  ],
+  "references": [
+    {
+      "path": "../shared"
+    }
   ]
 }
