--- a/package.json
+++ b/package.json
@@ -4,10 +4,19 @@
   "license": "GNU",
   "scripts": {
     "tests": "lerna run test --stream",
+    "pretty-quick": "lerna run pretty-quick",
+    "lint": "lerna run lint",
     "dev-api": "lerna run dev --scope api --stream",
     "dev-app": "lerna run start --scope app --stream --npm-client=yarn"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn pretty-quick",
+      "pre-push": "yarn lint && yarn tests"
+    }
+  },
   "devDependencies": {
+    "husky": "^4.2.5",
     "lerna": "^3.20.2",
     "typescript": "^3.8.3"
   }
