--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,95 +1,95 @@
 {
-  "name": "api",
-  "version": "1.0.0",
-  "description": "",
-  "homepage": "https://github.com/eBetApp/eBet#readme",
-  "license": "GNU",
-  "main": "src/app.ts",
-  "directories": {
-    "lib": "src"
-  },
-  "files": [
-    "src"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/eBetApp/eBet.git"
-  },
-  "scripts": {
-    "test:static": "tsc",
-    "test:unit": "jest --config=.jestrc.js",
-    "test": "npm run test:static && npm run test:unit",
-    "lint": "eslint src/*.ts* src/**/*.ts*",
-    "lintfix": "eslint src/*.ts* src/**/*.ts* --fix",
-    "pretty-quick": "npx pretty-quick src/*.ts* src/**/*.ts*",
-    "dev": "nodemon",
-    "build": "npx babel src/ --out-dir .dist/ --extensions \".ts\" --source-maps inline --quiet --copy-files"
-  },
-  "bugs": {
-    "url": "https://github.com/eBetApp/eBet/issues"
-  },
-  "dependencies": {
-    "@babel/runtime": "^7.8.4",
-    "apollo-server-express": "^2.11.0",
-    "aws-sdk": "^2.653.0",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "class-validator": "^0.11.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "graphql": "^14.6.0",
-    "jsonwebtoken": "^8.5.1",
-    "mailgun-js": "^0.22.0",
-    "multer": "^1.4.2",
-    "multer-s3": "^2.9.0",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "pg": "^7.18.2",
-    "pg-connection-string": "^2.1.0",
-    "pm2": "^4.2.3",
-    "swagger-jsdoc": "^3.5.0",
-    "swagger-ui-express": "^4.1.3",
-    "typeorm": "^0.2.24"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.6",
-    "@babel/node": "^7.8.4",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-decorators": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/preset-env": "^7.8.6",
-    "@babel/preset-typescript": "^7.8.3",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.2",
-    "@types/jest": "^25.1.3",
-    "@types/jsonwebtoken": "^8.3.8",
-    "@types/mailgun-js": "^0.22.4",
-    "@types/multer": "^1.4.2",
-    "@types/multer-s3": "^2.7.7",
-    "@types/node": "^13.7.7",
-    "@types/passport": "^1.0.2",
-    "@types/passport-jwt": "^3.0.3",
-    "@types/passport-local": "^1.0.33",
-    "@types/superagent": "^4.1.7",
-    "@types/supertest": "^2.0.8",
-    "@types/swagger-jsdoc": "^3.0.2",
-    "@types/swagger-ui-express": "^4.1.1",
-    "@typescript-eslint/eslint-plugin": "^2.21.0",
-    "@typescript-eslint/parser": "^2.21.0",
-    "babel-jest": "^25.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "husky": "^4.2.3",
-    "jest": "^25.1.0",
-    "nodemon": "^2.0.2",
-    "prettier": "1.19.1",
-    "prettier-eslint": "^9.0.1",
-    "pretty-quick": "^2.0.1",
-    "supertest": "^4.0.2",
-    "ts-node": "^8.6.2"
-  }
+	"name": "api",
+	"version": "1.0.0",
+	"description": "",
+	"homepage": "https://github.com/eBetApp/eBet#readme",
+	"license": "GNU",
+	"main": "src/app.ts",
+	"directories": {
+		"lib": "src"
+	},
+	"files": [
+		"src"
+	],
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/eBetApp/eBet.git"
+	},
+	"scripts": {
+		"test:static": "tsc",
+		"test:unit": "jest --config=.jestrc.js",
+		"test": "npm run test:static && npm run test:unit",
+		"lint": "eslint src/*.ts* src/**/*.ts*",
+		"lintfix": "eslint src/*.ts* src/**/*.ts* --fix",
+		"pretty-quick": "npx pretty-quick --staged src/*.ts* src/**/*.ts*",
+		"dev": "nodemon",
+		"build": "npx babel src/ --out-dir .dist/ --extensions \".ts\" --source-maps inline --quiet --copy-files"
+	},
+	"bugs": {
+		"url": "https://github.com/eBetApp/eBet/issues"
+	},
+	"dependencies": {
+		"@babel/runtime": "^7.8.4",
+		"apollo-server-express": "^2.11.0",
+		"aws-sdk": "^2.653.0",
+		"bcryptjs": "^2.4.3",
+		"body-parser": "^1.19.0",
+		"class-validator": "^0.11.0",
+		"cors": "^2.8.5",
+		"express": "^4.17.1",
+		"graphql": "^14.6.0",
+		"jsonwebtoken": "^8.5.1",
+		"mailgun-js": "^0.22.0",
+		"multer": "^1.4.2",
+		"multer-s3": "^2.9.0",
+		"passport": "^0.4.1",
+		"passport-jwt": "^4.0.0",
+		"passport-local": "^1.0.0",
+		"pg": "^7.18.2",
+		"pg-connection-string": "^2.1.0",
+		"pm2": "^4.2.3",
+		"swagger-jsdoc": "^3.5.0",
+		"swagger-ui-express": "^4.1.3",
+		"typeorm": "^0.2.24"
+	},
+	"devDependencies": {
+		"@babel/cli": "^7.8.4",
+		"@babel/core": "^7.8.6",
+		"@babel/node": "^7.8.4",
+		"@babel/plugin-proposal-class-properties": "^7.8.3",
+		"@babel/plugin-proposal-decorators": "^7.8.3",
+		"@babel/plugin-transform-runtime": "^7.8.3",
+		"@babel/preset-env": "^7.8.6",
+		"@babel/preset-typescript": "^7.8.3",
+		"@types/bcryptjs": "^2.4.2",
+		"@types/cors": "^2.8.6",
+		"@types/express": "^4.17.2",
+		"@types/jest": "^25.1.3",
+		"@types/jsonwebtoken": "^8.3.8",
+		"@types/mailgun-js": "^0.22.4",
+		"@types/multer": "^1.4.2",
+		"@types/multer-s3": "^2.7.7",
+		"@types/node": "^13.7.7",
+		"@types/passport": "^1.0.2",
+		"@types/passport-jwt": "^3.0.3",
+		"@types/passport-local": "^1.0.33",
+		"@types/superagent": "^4.1.7",
+		"@types/supertest": "^2.0.8",
+		"@types/swagger-jsdoc": "^3.0.2",
+		"@types/swagger-ui-express": "^4.1.1",
+		"@typescript-eslint/eslint-plugin": "^2.21.0",
+		"@typescript-eslint/parser": "^2.21.0",
+		"babel-jest": "^25.1.0",
+		"eslint": "^6.8.0",
+		"eslint-config-prettier": "^6.10.0",
+		"eslint-plugin-prettier": "^3.1.2",
+		"husky": "^4.2.3",
+		"jest": "^25.1.0",
+		"nodemon": "^2.0.2",
+		"prettier": "1.19.1",
+		"prettier-eslint": "^9.0.1",
+		"pretty-quick": "^2.0.1",
+		"supertest": "^4.0.2",
+		"ts-node": "^8.6.2"
+	}
 }
