api[PROCESS](heroku) added --prefix in start script

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -23,7 +23,8 @@
 		"lintfix": "eslint src/*.ts* src/**/*.ts* --fix",
 		"pretty-quick": "npx pretty-quick --staged src/*.ts* src/**/*.ts*",
 		"dev": "nodemon",
-		"build": "npx babel src/ --out-dir .dist/ --extensions \".ts\" --source-maps inline --quiet --copy-files"
+		"build": "npx babel src/ --out-dir .dist/ --extensions \".ts\" --source-maps inline --quiet --copy-files",
+		"start-heroku": "pm2-runtime start ecosystem.config.js"
 	},
 	"bugs": {
 		"url": "https://github.com/eBetApp/eBet/issues"
