shared[ARCHI](tspath) added shared in tsconfig path and npm tspath package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
-    // TODO: centralize common options to all packages
+    "baseUrl": "./packages",
+    "paths": {
+      "@shared/*": ["./shared/*"]
+    }
   }
 }
