--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "husky": "^4.2.5",
     "lerna": "^3.20.2",
+    "tspath": "^1.3.7",
     "typescript": "^3.8.3"
   },
   "dependencies": {
