--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -3,10 +3,7 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "jsx": "react-native",
-    "lib": [
-      "dom",
-      "esnext"
-    ],
+    "lib": ["dom", "esnext"],
     "moduleResolution": "node",
     "noEmit": true,
     "skipLibCheck": true,
@@ -17,10 +14,5 @@
     "babel.config.js",
     "metro.config.js",
     "jest.config.js"
-  ],
-  "references": [
-    {
-      "path": "../shared"
-    }
   ]
 }
