--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -83,6 +83,7 @@
 		"eslint": "^6.8.0",
 		"eslint-config-prettier": "^6.10.0",
 		"eslint-plugin-prettier": "^3.1.2",
+		"graphql-passport": "^0.6.3",
 		"husky": "^4.2.3",
 		"jest": "^25.1.0",
 		"nodemon": "^2.0.2",
