--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -80,6 +80,8 @@
 		"@typescript-eslint/eslint-plugin": "^2.21.0",
 		"@typescript-eslint/parser": "^2.21.0",
 		"babel-jest": "^25.1.0",
+		"class-transformer": "^0.2.3",
+		"class-transformer-validator": "^0.8.0",
 		"eslint": "^6.8.0",
 		"eslint-config-prettier": "^6.10.0",
 		"eslint-plugin-prettier": "^3.1.2",
