--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -15,7 +15,11 @@
 		"outDir": ".dist",
 	},
 	"files": ["types.d.ts"],
-	"include": ["src", "types.d.ts"],
+	"include": [
+		"src", 
+		"types.d.ts",
+		"tests"
+	],
 	"exclude": [
 		".eslintrc.js",
 		".jestrc.js",
