--- a/packages/api/doc/User.yml
+++ b/packages/api/doc/User.yml
@@ -27,6 +27,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/User_Error_Format"
+        "500":
+          description: Unexpected error - User not created
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Response_Unexpected_Error"
   #############################
   /auth/signin:
     post:
@@ -46,7 +52,18 @@ paths:
               schema:
                 $ref: "#/components/schemas/Auth_Response_Success"
         "400":
-          description: Incorrect input data - User not logged
+          description: Incorrect input format data - User not logged
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User_Error_Format"
+        "500":
+          description: Unexpected error - User not logged
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Response_Unexpected_Error"
+
 
   #############################
   #### USER AUTHENTICATED #####
@@ -71,6 +88,12 @@ paths:
               schema:
                 type: array
                 $ref: "#/components/schemas/User_Response_With_Avatar"
+        "401":
+          description: Token provided is not JWT formatted
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Token_Is_Not_Token"
         "403":
           description: Only operations on its own user are allowed
           content:
@@ -82,21 +105,13 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  message:
-                    type: string
+                $ref: "#/components/schemas/Error_User_Not_Found"
         "500":
           description: Unexpected error
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                  error:
-                    type: string
+                $ref: "#/components/schemas/Response_Unexpected_Error"
   #############################
   /user/update:
     put:
@@ -147,6 +162,12 @@ paths:
                     type: string
                   details:
                     type: object
+        "401":
+          description: Token provided is not JWT formatted
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Token_Is_Not_Token"
         "403":
           description: Only operations on its own user are allowed
           content:
@@ -158,12 +179,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                  details:
-                    type: string
+                $ref: "#/components/schemas/Response_Unexpected_Error"
   #############################
   /user/update-password:
     put:
@@ -206,21 +222,17 @@ paths:
                   success:
                     type: string
         "400":
-          description: Format error
+          description: Wrong format of provided data
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  error:
-                    type: object
-                    properties:
-                      message:
-                        type: string
-                      details:
-                        type: array
-                        items:
-                          type: object
+                $ref: "#/components/schemas/Error_User_Not_Found"
+        "401":
+          description: Token provided is not JWT formatted
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Token_Is_Not_Token"
         "403":
           description: Only operations on its own user are allowed
           content:
@@ -228,22 +240,17 @@ paths:
               schema:
                 $ref: "#/components/schemas/User_Error_Unauthorized"
         "404":
-          description: User not found
+          description: User cannot be found
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/User_Error_Unauthorized"
+                $ref: "#/components/schemas/Error_User_Not_Found"
         "500":
           description: Unexpected error
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                  details:
-                    type: string
+                $ref: "#/components/schemas/Response_Unexpected_Error"
   #############################
   /user/update-avatar/:
     put:
@@ -278,10 +285,26 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/User_Error_Unauthorized"
+        "401":
+          description: Token provided is not JWT formatted
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Token_Is_Not_Token"
+        "404":
+          description: User cannot be found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error_User_Not_Found"
         "422":
           description: Incorrect image data
         "500":
-          description: Internal error
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Response_Unexpected_Error"
     #############################
   /user/delete/:uuid:
     delete:
@@ -297,23 +320,29 @@ paths:
         - $ref: "#/components/parameters/Bearer_Token"
       responses:
         "200":
-          description: User found
+          description: Deletion is confirmed
           content:
             application/json:
               schema:
                 type: object
                 properties:
-                  success:
-                    type: string
-        "400":
-          description: Uuid required
+                  status:
+                    type: integer
+                  data:
+                    type: object
+                    properties:
+                      message:
+                        type: string
+                example:
+                  status: 200
+                  data:
+                      message: Success - User with uuid 123 successfully deleted
+        "401":
+          description: Token provided is not JWT formatted
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  error:
-                    type: string
+                $ref: "#/components/schemas/Token_Is_Not_Token"
         "403":
           description: Only operations on its own user are allowed
           content:
@@ -325,12 +354,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                  details:
-                    type: string
+                $ref: "#/components/schemas/Response_Unexpected_Error"
   #############################
   /user/delete-avatar/:fileKey:
     delete:
@@ -351,6 +375,7 @@ paths:
           required: true
         - $ref: "#/components/parameters/Bearer_Token"
       responses:
+      # TODO
         "200":
           description: Image correctly deleted
           content:
@@ -360,6 +385,12 @@ paths:
                 properties:
                   message:
                     type: string
+        "401":
+          description: Token provided is not JWT formatted
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Token_Is_Not_Token"
         "403":
           description: Only operations on its own user are allowed
           content:
@@ -367,16 +398,11 @@ paths:
               schema:
                 $ref: "#/components/schemas/User_Error_Unauthorized"
         "500":
-          description: Image cannot be deleted
+          description: Unexpected error
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                  error:
-                    type: string
+                $ref: "#/components/schemas/Response_Unexpected_Error"
   #############################
 
 components:
@@ -387,30 +413,45 @@ components:
         error:
           type: object
           properties:
+            status:
+              type: integer
+            name:
+              type: string
             message:
               type: string
+      example:
+        error:
+          status:
+            value: 403
+          name:
+            value: "Forbidden"
+          message:
+            value: "Token and uuid provided do not match"
     #############################
     User_Response_With_Avatar:
       type: object
       properties:
-        uuid:
-          type: string
-        movies:
-          type: array
-          items:
-            $ref: '#/components/schemas/UserMovie'
-        nickname:
-          type: string
-        email:
-          type: string
-        avatar:
-          type: string
+        status:
+          type: integer
+        data:
+          type: object
+          properties:
+            uuid:
+              type: string
+            nickname:
+              type: string
+            email:
+              type: string
+            avatar:
+              type: string
       example:
-        user:
-          uuid: 4c2d544a-803f-4668-b4ed-410a1f
-          nickname: Luc
-          email: luc@gmail.com
-          avatar: 123456
+        status: 200
+        data:
+          user:
+            uuid: UUID
+            nickname: Luc
+            email: luc@gmail.com
+            avatar: https://...
     #############################
     User_Request_Body_Only_Uuid:
       type: object
@@ -461,19 +502,26 @@ components:
     Auth_Response_Success:
       type: object
       properties:
-        uuid:
-          type: string
-        movies:
-          type: array
-          items:
-            $ref: '#/components/schemas/UserMovie'
-        nickname:
-          type: string
-        email:
-          type: string
-        avatar:
-          type: string
+        status:
+          type: integer
+        data:
+          type: object
+          properties:
+            uuid:
+              type: string
+            nickname:
+              type: string
+            email:
+              type: string
+            avatar:
+              type: string
+        meta:
+          type: object
+          properties:
+            token:
+              type: string
       example:
+        status: 201
         data:
           user:
             uuid: UUID
@@ -489,38 +537,67 @@ components:
         error:
           type: object
           properties:
+            status:
+              type: integer
+            name:
+              type: string
             message:
               type: string
-            details:
-              type: array
-              items:
-                type: object
-                properties:
-                  target:
-                    type: object
-                  value:
-                    type: string
-                  property:
-                    type: string
-                  children:
-                    type: array
-                    items:
-                      type: string
-                  constraints:
-                    type: object
+              description: pwd too short, wrong email format, email already used, etc
+      example:
+        error:
+          status:
+            value: 400
+          name:
+            value: "FormatError"
+          message:
+            value: "Wrong email"
     #############################
-    UserMovie:
+    Error_User_Not_Found:
       type: object
       properties:
-        id:
-          type: integer
-          description: UserMovie ID
-        movie:
-          type: string
-          description: Movie ID
+        error:
+          type: object
+          properties:
+            status:
+              type: integer
+            name:
+              type: string
+            message:
+              type: string
       example:
-        id: 4
-        movie: "tt0070909"
+        error:
+          status:
+            value: 404
+          name:
+            value: "NotFoundError"
+          message:
+            value: ""
+    #############################
+    Response_Unexpected_Error:
+      type: object
+      properties:
+        error:
+          type: object
+          properties:
+            status:
+              type: integer
+            name:
+              type: string
+            message:
+              type: string
+      example:
+        error:
+          status:
+            value: 500
+          name:
+            value: "UnexpectedError"
+          message:
+            value: ""
+    #############################
+    Token_Is_Not_Token:
+      example:
+        unauthorized
   #############################
   parameters:
     Bearer_Token:
