transverse[ARCHI] added shared types

--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -14,10 +14,10 @@
 		"experimentalDecorators": true,
 		"outDir": ".dist",
 	},
-	"files": ["types.d.ts"],
 	"include": [
 		"src", 
 		"types.d.ts",
+		"../shared/types.d.ts",
 		"tests"
 	],
 	"exclude": [
