--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "tests": "lerna run test --stream",
     "pretty-quick": "lerna run pretty-quick",
     "lint": "lerna run lint",
+    "lintfix": "lerna run lintfix",
     "dev-api": "lerna run dev --scope api --stream",
     "dev-app": "lerna run start --scope app --stream --npm-client=yarn",
     "build": "lerna run build"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn pretty-quick",
+      "pre-commit": "yarn lint",
       "pre-push": "yarn lint && yarn tests"
     }
   },
