--- a/packages/api/doc/User.yml
+++ b/packages/api/doc/User.yml
@@ -64,7 +64,6 @@ paths:
               schema:
                 $ref: "#/components/schemas/Response_Unexpected_Error"
 
-
   #############################
   #### USER AUTHENTICATED #####
   #############################
@@ -88,6 +87,51 @@ paths:
               schema:
                 type: array
                 $ref: "#/components/schemas/User_Response_With_Avatar"
+        "401":
+          description: Token provided is not JWT formatted
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Token_Is_Not_Token"
+        "403":
+          description: Only operations on its own user are allowed
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User_Error_Unauthorized"
+        "404":
+          description: User cannot be found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error_User_Not_Found"
+        "500":
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Response_Unexpected_Error"
+  #############################
+  /user/get-bets/:userUuid:
+    get:
+      summary: Get user with bets by uuid
+      tags: [Bets]
+      parameters:
+        - in: path
+          name: userUuid
+          description: user uuid
+          schema:
+            type: string
+          required: true
+        - $ref: "#/components/parameters/Bearer_Token"
+      responses:
+        "200":
+          description: User found
+          content:
+            application/json:
+              schema:
+                type: array
+                $ref: "#/components/schemas/User_Response_With_Bets"
         "401":
           description: Token provided is not JWT formatted
           content:
@@ -343,7 +387,7 @@ paths:
                 example:
                   status: 200
                   data:
-                      message: Success - User with uuid 123 successfully deleted
+                    message: Success - User with uuid 123 successfully deleted
         "401":
           description: Token provided is not JWT formatted
           content:
@@ -382,7 +426,7 @@ paths:
           required: true
         - $ref: "#/components/parameters/Bearer_Token"
       responses:
-      # TODO
+        # TODO
         "200":
           description: Image correctly deleted
           content:
@@ -463,6 +507,46 @@ components:
             email: luc@gmail.com
             birthdate: 2000-12-31
             avatar: https://...
+    #############################
+    User_Response_With_Bets:
+      type: object
+      properties:
+        status:
+          type: integer
+        data:
+          type: object
+          properties:
+            uuid:
+              type: string
+            nickname:
+              type: string
+            email:
+              type: string
+            avatar:
+              type: string
+            bets:
+              type: array
+              items:
+                type: object
+                properties:
+                  uuid:
+                    type: string
+                  name:
+                    type: string
+      example:
+        status: 200
+        data:
+          user:
+            uuid: UUID
+            nickname: Luc
+            email: luc@gmail.com
+            avatar: https://...
+            bets:
+              - uuid: 1234
+                name: "my first bet"
+              - uuid: 4567
+                name: "my second bet"
+
     #############################
     User_Request_Body_Only_Uuid:
       type: object
@@ -616,8 +700,7 @@ components:
             value: ""
     #############################
     Token_Is_Not_Token:
-      example:
-        unauthorized
+      example: unauthorized
   #############################
   parameters:
     Bearer_Token:
