--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -42,6 +42,7 @@
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"graphql": "^14.6.0",
+		"graphql-passport": "^0.6.3",
 		"jsonwebtoken": "^8.5.1",
 		"mailgun-js": "^0.22.0",
 		"multer": "^1.4.2",
@@ -54,7 +55,9 @@
 		"pm2": "^4.2.3",
 		"swagger-jsdoc": "^3.5.0",
 		"swagger-ui-express": "^4.1.3",
-		"typeorm": "^0.2.24"
+		"typeorm": "^0.2.24",
+		"class-transformer": "^0.2.3",
+		"class-transformer-validator": "^0.8.0"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.8.4",
@@ -84,12 +87,9 @@
 		"@typescript-eslint/eslint-plugin": "^2.21.0",
 		"@typescript-eslint/parser": "^2.21.0",
 		"babel-jest": "^25.1.0",
-		"class-transformer": "^0.2.3",
-		"class-transformer-validator": "^0.8.0",
 		"eslint": "^6.8.0",
 		"eslint-config-prettier": "^6.10.0",
 		"eslint-plugin-prettier": "^3.1.2",
-		"graphql-passport": "^0.6.3",
 		"husky": "^4.2.3",
 		"jest": "^25.1.0",
 		"nodemon": "^2.0.2",
