--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -34,6 +34,8 @@
 		"aws-sdk": "^2.653.0",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.0",
+		"class-transformer": "^0.2.3",
+		"class-transformer-validator": "^0.8.0",
 		"class-validator": "^0.11.0",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
@@ -49,11 +51,10 @@
 		"pg": "^7.18.2",
 		"pg-connection-string": "^2.1.0",
 		"pm2": "^4.2.3",
+		"stripe": "^8.50.0",
 		"swagger-jsdoc": "^3.5.0",
 		"swagger-ui-express": "^4.1.3",
-		"typeorm": "^0.2.24",
-		"class-transformer": "^0.2.3",
-		"class-transformer-validator": "^0.8.0"
+		"typeorm": "^0.2.24"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.8.4",
