--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,10 +1,12 @@
 {
-	"extends": "../../tsconfig.json",
 	"compilerOptions": {
 		"target": "esnext",
 		"moduleResolution": "node",
 		"module": "commonjs",
-		"lib": ["esnext", "dom"],
+		"lib": [
+			"esnext",
+			"dom"
+		],
 		"allowJs": false,
 		"noEmit": true,
 		"strict": true,
@@ -15,9 +17,8 @@
 		"outDir": ".dist",
 	},
 	"include": [
-		"src", 
+		"src",
 		"types.d.ts",
-		"../shared/types.d.ts",
 		"tests"
 	],
 	"exclude": [
