--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -57,6 +57,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.7.0",
     "@types/express": "^4.17.5",
     "@types/react": "^16.9.23",
     "@types/react-native": "^0.61.17",
