--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -44,26 +44,36 @@
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.6",
+    "@react-navigation/stack": "^5.5.1",
     "@types/jest": "^25.1.3",
     "@types/react-test-renderer": "^16.9.2",
-    "expo": "~36.0.0",
-    "expo-image-picker": "^8.1.0",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-screens": "2.0.0-alpha.12",
-    "react-native-web": "~0.11.7",
+    "expo": "^37.0.0",
+    "expo-image-picker": "~8.1.0",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-elements": "^2.0.2",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-safe-area-context": "0.7.3",
+    "react-native-screens": "~2.2.0",
+    "react-native-web": "^0.11.7",
     "stripe": "^8.50.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "@stripe/react-stripe-js": "^1.1.2",
-    "@stripe/stripe-js": "^1.7.0",
+    "@react-navigation/bottom-tabs": "^5.5.2",
+    "@react-navigation/native": "^5.5.1",
     "@types/express": "^4.17.5",
-    "@types/react": "^16.9.23",
-    "@types/react-native": "^0.61.17",
-    "babel-preset-expo": "~8.0.0",
+    "@types/react": "^16.9.11",
+    "@types/react-native": "^0.60.22",
+    "babel-preset-expo": "^8.1.0",
+    "babel-preset-react-native": "^4.0.1",
     "jest": "^25.1.0",
+    "react-native-credit-card-input": "^0.4.1",
+    "react-native-dotenv": "^0.2.0",
+    "react-native-gesture-handler": "~1.6.0",
+    "stripe-client": "^1.1.5",
     "ts-jest": "^25.2.1",
     "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
