--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -36,8 +36,11 @@
 		"@babel/runtime": "^7.8.4",
 		"apollo-server-express": "^2.11.0",
 		"aws-sdk": "^2.653.0",
+		"axios": "^0.19.2",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.0",
+		"class-transformer": "^0.2.3",
+		"class-transformer-validator": "^0.8.0",
 		"class-validator": "^0.11.0",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
@@ -55,9 +58,7 @@
 		"pm2": "^4.2.3",
 		"swagger-jsdoc": "^3.5.0",
 		"swagger-ui-express": "^4.1.3",
-		"typeorm": "^0.2.24",
-		"class-transformer": "^0.2.3",
-		"class-transformer-validator": "^0.8.0"
+		"typeorm": "^0.2.24"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.8.4",
