--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -50,6 +50,7 @@
 		"mailgun-js": "^0.22.0",
 		"multer": "^1.4.2",
 		"multer-s3": "^2.9.0",
+		"node-schedule": "^1.3.2",
 		"passport": "^0.4.1",
 		"passport-jwt": "^4.0.0",
 		"passport-local": "^1.0.0",
@@ -78,6 +79,7 @@
 		"@types/multer": "^1.4.2",
 		"@types/multer-s3": "^2.7.7",
 		"@types/node": "^13.7.7",
+		"@types/node-schedule": "^1.3.0",
 		"@types/passport": "^1.0.2",
 		"@types/passport-jwt": "^3.0.3",
 		"@types/passport-local": "^1.0.33",
