--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -62,6 +62,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/datetimepicker": "^2.4.2",
     "@react-navigation/bottom-tabs": "^5.5.2",
     "@react-navigation/native": "^5.5.1",
@@ -71,10 +72,10 @@
     "babel-preset-expo": "^8.1.0",
     "babel-preset-react-native": "^4.0.1",
     "jest": "^25.1.0",
-    "moment": "^2.27.0",
     "react-native-credit-card-input": "^0.4.1",
     "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-webview": "^10.3.1",
     "stripe-client": "^1.1.5",
     "ts-jest": "^25.2.1",
     "tslint": "^6.0.0",
