--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -74,6 +74,7 @@
     "jest": "^25.1.0",
     "react-native-credit-card-input": "^0.4.1",
     "react-native-dotenv": "^0.2.0",
+    "react-native-easy-toast": "^1.2.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-webview": "^10.3.1",
     "stripe-client": "^1.1.5",
