--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -19,7 +19,7 @@ jobs:
           POSTGRES_DATABASE: postgres
           POSTGRES_PORT: 5432
         ports:
-        - 5432:5432
+          - 5432:5432
         # needed because the postgres container does not provide a healthcheck
         # Set health checks to wait until postgres has started
         options: >-
@@ -46,3 +46,4 @@ jobs:
           SECRET: ${{ secrets.SECRET }}
           MAIL_KEY: ${{ secrets.MAIL_KEY }}
           MAIL_DOMAIN: ${{ secrets.MAIL_DOMAIN }}
+          STRIPE_KEY: ${{ secrets.STRIPE_KEY}}
