--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -63,6 +63,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.10.4",
+    "@babel/plugin-proposal-export-namespace-from": "^7.10.4",
     "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/datetimepicker": "^2.4.2",
     "@react-navigation/bottom-tabs": "^5.5.2",
