--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -6,6 +6,7 @@
       "dom",
       "esnext"
     ],
+    "target": "ES5",
     "moduleResolution": "node",
     "noEmit": true,
     "skipLibCheck": true,
